--- a/index.html
+++ b/index.html
@@ -108,53 +108,23 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Hôm nay là ...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
+				<p>Lại thêm một ngày mới nữa</p>
+				<p>một ngày như mọi ngày</p>
+				<p>Nhi sẽ nhận ra một năm nữa đã trôi qua</p>
+
+				<p><strong>Tuy nhiên</strong></p>
+				<p>hôm nay là một ngày đặc biệt</p>
+				<p>rất đặc biệt với Nhi</p>
+				<p>hôm nay là sinh nhật của Nhi</p>
+				<p>Điều Nguyên muốn nói là …</p>
+				<p>Nguyên mong mọi điều tốt đẹp đều đến với Nhi</p>
+				<p>mọi điều ước của Nhi đều trở thành hiện thực</p>
 				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>mong Nhi vẫn giữ nụ cười trên môi</p>
+
+				<p>Và cuối cùng là …</p>
+				<p>Chúc Nhi sinh nhận vui vẻ</p>
+
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
