--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
 				<p>rất đặc biệt với Nhi</p>
 				<p>hôm nay là sinh nhật của Nhi</p>
 				<p>Điều Nguyên muốn nói là …</p>
-				<p>Nguyên mong mọi điều tốt đẹp đều đến với Nhi</p>
-				<p>mọi điều ước của Nhi đều trở thành hiện thực</p>
-				<p>and let me share...</p>
+				<p>mong mọi điều tốt đẹp đều đến với Nhi</p>
+				<p>mong mọi điều ước của Nhi đều trở thành hiện thực</p>
 				<p>mong Nhi vẫn giữ nụ cười trên môi</p>
 
 				<p>Và cuối cùng là …</p>
