--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<audio class="song" controls loop>
 		<source src="hbd.mp3">
 		</source>
-		Your browser isn't invited for super fun audio time.
+		Trình duyệt của bạn không hỗ trợ âm thanh này.
 	</audio>
 	<div class="balloons text-center" id="b1">
 		<h2 style="color:#F2B300;">L</h2>
@@ -129,14 +129,14 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
+					<button class="btn btn-primary" id="turn_on">Mở đèn lên</button>
+					<button class="btn btn-primary" id="play">Mở nhạc lên</button>
+					<button class="btn btn-primary" id="bannar_coming">Trang trí</button>
+					<button class="btn btn-primary" id="balloons_flying">Bong bóng</button>
+					<button class="btn btn-primary" id="cake_fadein">Bánh kem</button>
+					<button class="btn btn-primary" id="light_candle">Thắp nến</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="story">Lời nhắn</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
