--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Mở đèn lên</button>
-					<button class="btn btn-primary" id="play">Mở nhạc lên</button>
+					<button class="btn btn-primary" id="turn_on">Mở đèn</button>
+					<button class="btn btn-primary" id="play">Mở nhạc</button>
 					<button class="btn btn-primary" id="bannar_coming">Trang trí</button>
 					<button class="btn btn-primary" id="balloons_flying">Bong bóng</button>
 					<button class="btn btn-primary" id="cake_fadein">Bánh kem</button>
