--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				<p>mong Nhi vẫn giữ nụ cười trên môi</p>
 
 				<p>Và cuối cùng là …</p>
-				<p>Chúc Nhi sinh nhận vui vẻ</p>
+				<p>Chúc Nhi sinh nhật vui vẻ</p>
 
 			</div>
 		</div>
