fix font mistakes

--- a/index.html
+++ b/index.html
@@ -109,17 +109,16 @@
 		<div class="row message">
 			<div class="col-md-12">
 				<p>Lại thêm một ngày mới nữa</p>
-				<p>một ngày như mọi ngày</p>
-				<p>Nhi sẽ nhận ra một năm nữa đã trôi qua</p>
+				<p>một ngày như mọi ngày khác</p>
 
 				<p><strong>Tuy nhiên</strong></p>
 				<p>hôm nay là một ngày đặc biệt</p>
-				<p>rất đặc biệt với Nhi</p>
-				<p>hôm nay là sinh nhật của Nhi</p>
+				<p>rất đặc biệt với Bé</p>
+				<p>hôm nay là sinh nhật của Bé đó</p>
 				<p>Điều Nguyên muốn nói là …</p>
-				<p>mong mọi điều tốt đẹp đều đến với Nhi</p>
-				<p>mong mọi điều ước của Nhi đều trở thành hiện thực</p>
-				<p>mong Nhi vẫn giữ nụ cười trên môi</p>
+				<p>mong mọi điều tốt đẹp đều đến với Bé nè</p>
+				<p>mong mọi điều ước của Bé đều trở thành hiện thực nè</p>
+				<p>mong Bé vẫn giữ nụ cười trên môi</p>
 
 				<p>Và cuối cùng là …</p>
 				<p>Chúc Nhi sinh nhật vui vẻ</p>
