Change 'Nhi' to 'Bé' in the message

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<p>mong Bé vẫn giữ nụ cười trên môi</p>
 
 				<p>Và cuối cùng là …</p>
-				<p>Chúc Nhi sinh nhật vui vẻ</p>
+				<p>Chúc Bé sinh nhật vui vẻ</p>
 
 			</div>
 		</div>
