--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="Birthday, Happy">
 	<!-- Strat of Facebook Meta -->
 	<meta property="og:type" content="E-Greeting" />
-	<meta property="og:image" content="favicon.ico" />
+	<meta property="og:image" content="/assets/style/favicon.ico" />
 	<meta property="og:description" content="Wish you a very Happy Birthday">
 	<!-- End of Facebook Meta Tags -->
 	<meta name="viewport"
@@ -24,18 +24,18 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="stylesheet" type="text/css" href="loading.css">
+	<link rel="stylesheet" type="text/css" href="/assets/style/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="/assets/style/loading.css">
 	<link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
 	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'> -->
-	<link rel="stylesheet/less" href="cake.less">
+	<link rel="stylesheet/less" href="/assets/style/cake.less">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
 </head>
 
 <body>
 	<div class="loading"></div>
 	<audio class="song" controls loop>
-		<source src="hbd.mp3">
+		<source src="/assets/audio/hbd.mp3">
 		</source>
 		Trình duyệt của bạn không hỗ trợ âm thanh này.
 	</audio>
@@ -61,7 +61,7 @@
 		<h2 style="color:#20CFB4;">I</h2>
 	</div>
 
-	<img src="Balloon-Border.png" width="100%" class="balloon-border">
+	<img src="/assets/images/hbd.mp3Balloon-Border.png" width="100%" class="balloon-border">
 
 
 	<div class="container">
@@ -88,7 +88,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<img src="banner.png" class="bannar">
+				<img src="/assets/images/banner.png" class="bannar">
 			</div>
 		</div>
 		<div class="row cake-cover">
@@ -156,7 +156,7 @@
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="effect.js"></script>
+<script src="/assets/js/effect.js"></script>
 <script>
 	(function (i, s, o, g, r, a, m) {
 		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
